# sfml_proj

./: .gitignore  CMakeLists.txt  Entity.h  EntityManager.cpp  EntityManager.h  Game.cpp  Game.h  Vec2.h  build.sh  config.txt  main.cpp  run.sh
Ass-2/: README.md  clean.sh  config.txt
Ass-2/include/: Components.h
Ass-2/src/: Game.cpp  Vec2.cpp
Ass-3/: README.md  build.sh
Ass-3/src/: Entity.cpp
include/: Entity.h  EntityManager.h  Game.h
src/: CMakeLists.txt  EntityManager.cpp  Game.cpp  Vec2.cpp  main.cpp
